force-app/main/default/objects/AdminTool_AuditLog__c/AdminTool_AuditLog__c.object-meta.xml
<CustomObject>
    <description>Audit log for all write operations performed via the SF Admin Tool.</description>
    <label>Admin Tool Audit Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>