force-app/main/default/objects/AdminTool_AuditLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>The administrative action performed (e.g., TOGGLE_TRIGGER, ASSIGN_PERM).</description>
    <label>Action</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>