force-app/main/default/objects/AdminTool_AuditLog__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details about the change (e.g., before/after JSON diff).</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>