force-app/main/default/objects/AdminTool_AuditLog__c/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <description>The API name of the affected metadata component.</description>
    <label>Target Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>