force-app/main/default/objects/AdminTool_AuditLog__c/fields/TargetType__c.field-meta.xml
<CustomField>
    <fullName>TargetType__c</fullName>
    <description>The type of metadata affected (e.g., ApexTrigger, Profile).</description>
    <label>Target Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>