force-app/main/default/objects/AdminTool_AuditLog__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>The date and time the action occurred.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>