force-app/main/default/objects/AdminTool_AuditLog__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>The name of the user who performed the action.</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>